Regression: Blender Crashes when adding new video to new scene in VSE #99266

Closed
opened 2022-06-29 11:38:32 +02:00 by Rudy · 14 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.95

Blender Version
Broken: 3.2.0. Caused by 77794b1a7b

Short description of error
Crashes when putting a video into new sequencer scene from File Browser workspace

Exact steps for others to reproduce the error
I was able to recreate this with a new .blend project with these steps:

Open Blender
Choose Video Editing template
Use File Browser workspace to navigate to video(s)
Place video into VSE
Create new scene (I tried both 'New' and 'Copy Settings')
Place video into VSE again

I use click-drag, you will be able to drag the video around but as soon as you hover it over the VSE timeline it will crash
(happens whether or not the same video)

Also, after some testing, crash doesn't happen if you drop video in via computer's file browser (File Explorer in my case)

I thought it was because I was using a .blend from a previous version but then happened with brand new project on latest stable release

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.95 **Blender Version** Broken: 3.2.0. Caused by 77794b1a7b **Short description of error** Crashes when putting a video into new sequencer scene from File Browser workspace **Exact steps for others to reproduce the error** I was able to recreate this with a new .blend project with these steps: Open Blender Choose Video Editing template Use File Browser workspace to navigate to video(s) Place video into VSE Create new scene (I tried both 'New' and 'Copy Settings') Place video into VSE again I use click-drag, you will be able to drag the video around but as soon as you hover it over the VSE timeline it will crash (happens whether or not the same video) Also, after some testing, crash doesn't happen if you drop video in via computer's file browser (File Explorer in my case) I thought it was because I was using a .blend from a previous version but then happened with brand new project on latest stable release
Author

Added subscriber: @RudyTheNinja

Added subscriber: @RudyTheNinja
Author

I also just tested it with VSE's 'add' function
image.png
And it worked fine just like when using File Explorer

Also, I am able to drag from File Browser workspace AFTER using one of the other methods
But only to that scene. Crashes on any new scenes the same as reported

In all previous tests I've also refreshed the File Browser workspace (refresh button)

Seems to only crash when I use File Browser workspace

I also just tested it with VSE's 'add' function ![image.png](https://archive.blender.org/developer/F13237311/image.png) And it worked fine just like when using File Explorer Also, I am able to drag from File Browser workspace AFTER using one of the other methods But only to that scene. Crashes on any new scenes the same as reported In all previous tests I've also refreshed the File Browser workspace (refresh button) Seems to only crash when I use File Browser workspace
Author

Just tried through File Browser workspace again but with different videos in a different file path in case it maybe didn't like the previous file path/folder
Same drive but highly doubt it'll turn out different if I change that

I tried finding a crash log but:
%TEMPT% doesn't exist when I search for it
And there is nothing I my C:\tmp
As well as appdata/local/temp

Just tried through File Browser workspace again but with different videos in a different file path in case it maybe didn't like the previous file path/folder Same drive but highly doubt it'll turn out different if I change that I tried finding a crash log but: %TEMPT% doesn't exist when I search for it And there is nothing I my C:\tmp As well as appdata/local/temp

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm the crash.

Exception thrown: read access violation.
ed was nullptr.

>	blender.exe!update_overlay_strip_poistion_data(bContext * C, const int * mval) Line 239	C

 	blender.exe!draw_seq_in_view(bContext * C, wmWindow * UNUSED_win, wmDrag * drag, const int * xy) Line 260	C
 	blender.exe!wm_drags_draw(bContext * C, wmWindow * win) Line 987	C
 	blender.exe!wm_draw_window_onscreen(bContext * C, wmWindow * win, int view) Line 1082	C
 	blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 1117	C
 	blender.exe!wm_draw_update(bContext * C) Line 1339	C
 	blender.exe!WM_main(bContext * C) Line 630	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 551	C
 	[External Code]	

Investigating...

I can confirm the crash. > Exception thrown: read access violation. > **ed** was nullptr. ``` > blender.exe!update_overlay_strip_poistion_data(bContext * C, const int * mval) Line 239 C blender.exe!draw_seq_in_view(bContext * C, wmWindow * UNUSED_win, wmDrag * drag, const int * xy) Line 260 C blender.exe!wm_drags_draw(bContext * C, wmWindow * win) Line 987 C blender.exe!wm_draw_window_onscreen(bContext * C, wmWindow * win, int view) Line 1082 C blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 1117 C blender.exe!wm_draw_update(bContext * C) Line 1339 C blender.exe!WM_main(bContext * C) Line 630 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 551 C [External Code] ``` Investigating...
Germano Cavalcante changed title from Blender Crashes when adding new video to new scene in VSE to Regression: Blender Crashes when adding new video to new scene in VSE 2022-06-30 00:23:35 +02:00

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Author

Thanks Batman
.. I've always wanted to say that xD

Thanks Batman .. I've always wanted to say that xD
Author

This might help clarify/extend the backtracking in Blender versions
But the last one I used is 3.0
image.png

Pretty sure if this happened when updating 3.0 to 3.1 it would of already been reported
But just wanted to throw that out there incase nothing is found in 3.1 to 3.2 changes

This might help clarify/extend the backtracking in Blender versions But the last one I used is 3.0 ![image.png](https://archive.blender.org/developer/F13239883/image.png) Pretty sure if this happened when updating 3.0 to 3.1 it would of already been reported But just wanted to throw that out there incase nothing is found in 3.1 to 3.2 changes

This issue was referenced by b6c668a13d

This issue was referenced by b6c668a13dda87a0fc95bd1b5bbfde651e378263

This issue was referenced by 6bb703a9ee

This issue was referenced by 6bb703a9ee8dc368c17f7432485e2e863597a576

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2022-06-30 15:57:06 +02:00
Author

Yo!!
Jst thought I'd drop by to ask some things now that this has been "fixed"

Gonna shoot straight n say that I used quotes because now it's actually a bit annoying to use lol
So it no longer crashes but now no longer works as well as it used to

I can drag n drop but now the file is placed where the mouse is
So this means not only on the wrong frame -which I can just use a hotkey to move to current
But also on the wrong channel.. Which I dont have a hotkey for besides G+Y but have to hold downarrow till it slowly gets there or switch back over to the mouse

Not a big deal right, just correct it for every new strip/dropped video
That what it felt like.. for the first 15 or so lol
But then.. I jst had to ask if this is now the new way it's supposed to work
new.gif (click for GIF if doesnt autoplay)


Because, the add>movie option still works the exact same way the drag n drop used to work
Puts it in the current frame, and the lowest (I assume) channel
how it used to.gif (click for GIF if doesnt autoplay)


At first I thought I was jst nitpicking, like at least it doesnt crash anymore right??
But more and more I feel like it really is a valid annoyance since it's used so much
Everytime I work on a new video, sometimes short so I do a couple of them
As well as when I want to add sound, image, or more video to the project

Having that go to where the playhead/frame is and lowest channel really saves alot time in the workflow when making multiple videos one after the other (as well as add edits)
Having to reconfigure them to the right spot everytime really drags that flow out for each n every one

I'm also wondering if there's a setting I'm not seeing
I did redo my preferences, gotten into the habit of doing it manually
And this time I actually messed up my chance at selecting the "use previous settings" option on first boot by forgetting about it

I also went through the VSE and Timeline Editor's settings n couldnt find anything to snap drops to current frame or playhead, much less channels
image.png image.png image.png (sry, idk how to wrap these images to show horizontally n use less space to scroll through lol)

Anyways, rly hope this isnt the new drag n drop, or that I missed a checkbox option that's right in my face
But if it is then ig that's that :/

Yo!! Jst thought I'd drop by to ask some things now that this has been "fixed" Gonna shoot straight n say that I used quotes because now it's actually a bit annoying to use lol So it no longer crashes but now no longer works as well as it used to I can drag n drop but now the file is placed where the mouse is So this means not only on the wrong frame -which I can just use a hotkey to move to current But also on the wrong channel.. Which I dont have a hotkey for besides G+Y but have to hold downarrow till it slowly gets there or switch back over to the mouse Not a big deal right, just correct it for every new strip/dropped video That what it felt like.. for the first 15 or so lol But then.. I jst had to ask if this is now the new way it's supposed to work ![new.gif](https://archive.blender.org/developer/F13608886/new.gif) (click for GIF if doesnt autoplay) --- Because, the add>movie option still works the exact same way the drag n drop __used__ to work Puts it in the current frame, and the lowest (I assume) channel ![how it used to.gif](https://archive.blender.org/developer/F13608901/how_it_used_to.gif) (click for GIF if doesnt autoplay) --- At first I thought I was jst nitpicking, like at least it doesnt crash anymore right?? But more and more I feel like it really is a valid annoyance since it's used so much Everytime I work on a new video, sometimes short so I do a couple of them As well as when I want to add sound, image, or more video to the project Having that go to where the playhead/frame is and lowest channel really saves alot time in the workflow when making multiple videos one after the other (as well as add edits) Having to reconfigure them to the right spot everytime really drags that flow out for each n every one I'm also wondering if there's a setting I'm not seeing I did redo my preferences, gotten into the habit of doing it manually And this time I actually messed up my chance at selecting the "use previous settings" option on first boot by forgetting about it I also went through the VSE and Timeline Editor's settings n couldnt find anything to snap drops to current frame or playhead, much less channels ![image.png](https://archive.blender.org/developer/F13608917/image.png) ![image.png](https://archive.blender.org/developer/F13608919/image.png) ![image.png](https://archive.blender.org/developer/F13608923/image.png) (sry, idk how to wrap these images to show horizontally n use less space to scroll through lol) Anyways, rly hope this isnt the new drag n drop, or that I missed a checkbox option that's right in my face But if it is then ig that's that :/

This is how drag and drop is supposed to work, though it could initialize sequencer data, so it shows strip as it's being added, so it works like when you add strips to VSE template.

To add media to current frame as it was before, you can drop files in VSE preview instead of timeline.

This is how drag and drop is supposed to work, though it could initialize sequencer data, so it shows strip as it's being added, so it works like when you add strips to VSE template. To add media to current frame as it was before, you can drop files in VSE preview instead of timeline.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99266
No description provided.