Fix T99266: Crash when dragging file to VSE from file browser

Crash happened because sequencer data was not initialized. Ensure data
is initialized before adding strip.