source/blender/editors/space_sequencer/sequencer_drag_drop.c
@@ -233,7 +233,7 @@ static void update_overlay_strip_poistion_data(bContext *C, const int mval[2])
     coords->is_intersecting = false;
     Sequence dummy_seq = {
         .machine = coords->channel, .start = coords->start_frame, .len = coords->strip_len};
-    Editing *ed = SEQ_editing_get(scene);
+    Editing *ed = SEQ_editing_ensure(scene);
 
     for (int i = 0; i < coords->channel_len && !coords->is_intersecting; i++) {
       coords->is_intersecting = SEQ_transform_test_overlap(scene, ed->seqbasep, &dummy_seq);
